# learning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  aboutme.md  background-timetracker.js  checkerstests.cpp  dataloadertests.cpp  index.html  index.md  main.py  manifest.json  pom.xml  pyproject.toml  requirements.txt  setup.py  timetracker.css  timetracker.html  timetracker.js  utils.js  worker.js
arrays/: CMakeLists.txt  README.md  activity_selection_problem.cpp  activity_selection_problemtests.cpp  add_arrays.cpp  add_arraystests.cpp  arithmetic_triplets.cpp  arithmetic_tripletstests.cpp  arrays.cpp  arraytests.cpp  break_point_index.cpp  break_point_indextests.cpp  buy_and_sell_stock.cpp  buy_and_sell_stock_three.cpp  buy_and_sell_stock_threetests.cpp  buy_and_sell_stock_two.cpp  buy_and_sell_stock_twotests.cpp  buy_and_sell_stocktests.cpp  buy_n_sell_shares.cpp  buy_n_sell_sharestests.cpp  closest_pair.cpp  closest_pairtests.cpp  coin_change_problem.cpp  coin_change_problem_two.cpp  coin_change_problem_twotests.cpp  coin_change_problemtests.cpp  combinations.cpp  combinations_five.cpp  combinations_fivetests.cpp  combinations_four.cpp  combinations_fourtests.cpp  combinations_three.cpp  combinations_threetests.cpp  combinations_two.cpp  combinations_twotests.cpp  combinationstests.cpp  consecutive_numbers.cpp  consecutive_numberstests.cpp  count_occurrences.cpp  count_occurrencestests.cpp  (+234 more)
arrays/data/: activity_selection_problem.txt  add_arrays.txt  arithmetic_triplets.txt  break_point_index.txt  buy_and_sell_stock.txt  buy_and_sell_stock_three.txt  buy_and_sell_stock_two.txt  buy_n_sell_shares.txt  closest_pair.txt  coin_change_problem.txt  coin_change_problem_two.txt  combinations.txt  combinations_five.txt  combinations_four.txt  combinations_three.txt  combinations_two.txt  consecutive_numbers.txt  count_occurrences.txt  count_ones.txt  counting_sort.txt  decode_array.txt  determine_index.txt  distinct_absolute_count.txt  distinct_elements_count.txt  duplicates_in_range_k.txt  first_and_last_occurrence.txt  floor_and_ceil.txt  four_sum.txt  frequency_map.txt  frequency_map_two.txt  geometric_triplets.txt  greater_elements.txt  group_elements.txt  inversion_count.txt  inversion_count_two.txt  job_sequencing_problem.txt  k_closest_elements.txt  k_divisible_pairs.txt  k_partition_problem.txt  k_sum_subarray.txt  (+68 more)
arrays/includes/: activity_selection_problem.h  add_arrays.h  arithmetic_triplets.h  arrays.h  break_point_index.h  buy_and_sell_stock.h  buy_and_sell_stock_three.h  buy_and_sell_stock_two.h  buy_n_sell_shares.h  closest_pair.h  coin_change_problem.h  coin_change_problem_two.h  combinations.h  combinations_five.h  combinations_four.h  combinations_three.h  combinations_two.h  consecutive_numbers.h  count_occurrences.h  count_ones.h  counting_sort.h  decode_array.h  determine_index.h  dutch_national_flag.h  (+112 more)
dynamic_programming/: CMakeLists.txt  ball_arrangements.cpp  ball_arrangementstests.cpp  combinations_ten.cpp  combinations_tentests.cpp  employees_manager_mapping.cpp  employees_manager_mappingtests.cpp  pattern_match_four.cpp  pattern_match_fourtests.cpp  rod_cutting_two.cpp  rod_cutting_twotests.cpp
examples/: CMakeLists.txt  README.md
lists/: CMakeLists.txt  heaptests.cpp  linkedlisttests.cpp
matrices/: CMakeLists.txt  alive_probability.cpp  alive_probabilitytests.cpp  boggle_search.cpp  boggle_searchtests.cpp  chess_knight_problem.cpp  chess_knight_problemtests.cpp  collect_coins.cpp  collect_coinstests.cpp  collect_maximum_points.cpp  collect_maximum_pointstests.cpp  common_elements.cpp  common_elementstests.cpp  construct_young_tableau.cpp  construct_young_tableautests.cpp  convert_matrix.cpp  convert_matrix_two.cpp  convert_matrix_twotests.cpp  convert_matrixtests.cpp  count_islands.cpp  count_islandstests.cpp  diagonal_matrix_traversal.cpp  diagonal_matrix_traversaltests.cpp  duplicate_rows.cpp  duplicate_rowstests.cpp  extract_min_in_young_tableau.cpp  extract_min_in_young_tableautests.cpp  fill_matrix.cpp  fill_matrixtests.cpp  flood_fill_algorithm.cpp  flood_fill_algorithmtests.cpp  knight_tour_problem.cpp  knight_tour_problemtests.cpp  largest_plus.cpp  largest_plustests.cpp  largest_rectangle_area.cpp  largest_rectangle_areatests.cpp  largest_square_submatrix.cpp  largest_square_submatrix_two.cpp  largest_square_submatrix_twotests.cpp  (+80 more)
networks/: CMakeLists.txt  config.h  config.h.in  ipc-utils.cpp  shared_memory.cpp  shared_memory.h  tests.cpp
operators/: CMakeLists.txt  oprtests.cpp  test.cpp
search/: CMakeLists.txt  README.md  bfstests.cpp  dfstests.cpp  dlstests.cpp  gbfstests.cpp  gdfstests.cpp  idstests.cpp  ucstests.cpp
strings/: CMakeLists.txt  anagram_substring.cpp  anagram_substringtests.cpp  balanced_expression.cpp  balanced_expressiontests.cpp  balanced_parentheses.cpp  balanced_parenthesestests.cpp  check_anagram.cpp  check_anagramtests.cpp  check_circular_moves.cpp  check_circular_movestests.cpp  combinations_eight.cpp  combinations_eighttests.cpp  combinations_nine.cpp  combinations_ninetests.cpp  combinations_seven.cpp  combinations_seventests.cpp  combinations_six.cpp  combinations_sixtests.cpp  decode_sequence.cpp  decode_sequencetests.cpp  derive_string.cpp  derive_stringtests.cpp  duplicate_parenthesis.cpp  duplicate_parenthesistests.cpp  evaluate_postfix_expression.cpp  evaluate_postfix_expressiontests.cpp  excel_sheet_column_name.cpp  excel_sheet_column_nametests.cpp  first_non_repeating_character.cpp  first_non_repeating_charactertests.cpp  group_anagrams.cpp  group_anagramstests.cpp  infix_to_postfix.cpp  infix_to_postfixtests.cpp  interleaving_string.cpp  interleaving_string_two.cpp  interleaving_string_twotests.cpp  interleaving_stringtests.cpp  isomorphic_strings.cpp  (+61 more)
utils/: CMakeLists.txt  checkers.cpp  checkerstests.cpp  checks.py  dataloadertests.cpp  debug.cpp  debugtests.cpp  loadertests.cpp  maploadertests.cpp  matrixloadertests.cpp  memory.cpp  memorytests.cpp  menu.py  paths.cpp  primitiveLoadertests.cpp  runs.py  setloadertests.cpp  tupleloadertests.cpp  utils.py  vectorloadertests.cpp
(+660 files in other folders)
