[tool.poetry]
name = "pythonmachinelearning"
version = "0.1.0"
description = "Mainly consists of implementations from Python Machine Learning book."
authors = ["Claudio Corsi <noemail@domain.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# accepts = "^2020.7.1"
# pandas = "^1.1.2"
pandas = ""
# sklearn = "^0.0"
sklearn = ""
# tqdm = "^4.49.0"
tqdm = ""
# pydotplus = "^2.0.2"
pydotplus = ""
graphviz = ""
pyparsing = ""
matplotlib = ""
tensorflow = ""
pytest = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
